tests/baselines/reference/objectLiteralMemberWithQuestionMark1.errors.txt
tests/cases/compiler/objectLiteralMemberWithQuestionMark1.ts(1,14): error TS1112: A class member cannot be declared optional.


==== tests/cases/compiler/objectLiteralMemberWithQuestionMark1.ts (1 errors) ====
    var v = { foo?() { } }
                 ~
!!! error TS1112: A class member cannot be declared optional.